<resources>
    <string name="app_name">Cityu E-reserve</string>

    <!-- Strings related to login -->
    <string name="prompt_email">CityU Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_menu">CityU Reservation System</string>
    <string name="title_appointment">Appointment</string>
    <string name="title_new_appointment">New Appointment</string>
    <string name="title_medicalHistory">Medical History</string>
    <string name="title_news">News</string>
    <string name="title_aboutUs">About Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="appointment_Frag">Appointment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="hint_name_required">Date</string>
    <string name="hint_email">Time</string>
    <string name="hint_phone">Doctor</string>
    <string name="hint_street">Symptoms</string>
    <string name="label_name">Date:</string>
    <string name="label_email">Time:</string>
    <string name="label_phone">Doctor:</string>
    <string name="label_street">Symptoms:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the reservation</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="contact_added">Reserved successfully</string>
    <string name="contact_not_added">Reservation failed due to an error</string>
    <string name="contact_updated">Reservation updated</string>
    <string name="contact_not_updated">Reservation-update failed due to an error</string>
    <string name="invalid_query_uri">Invalid query Uri: </string>
    <string name="invalid_insert_uri">Invalid insert Uri: </string>
    <string name="invalid_update_uri">Invalid update Uri: </string>
    <string name="invalid_delete_uri">Invalid delete Uri: </string>
    <string name="insert_failed">Insert failed:</string>
</resources>
