<ScrollView android:id="@+id/detailsScrollView"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

   <GridLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:columnCount="2"
      android:useDefaultMargins="true">

      <TextView
          android:id="@+id/dateLabelTextView"
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="0"
          android:text="@string/label_name" />

      <TextView
          android:id="@+id/dateTextView"
          style="@style/ContactTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="0" />

      <TextView
          android:id="@+id/timeLabelTextView"
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="1"
          android:text="@string/label_phone" />

      <TextView
          android:id="@+id/timeTextView"
          style="@style/ContactTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="1" />

      <TextView
          android:id="@+id/doctorLabelTextView"
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="2"
          android:text="@string/label_email" />

      <TextView
          android:id="@+id/doctorTextView"
          style="@style/ContactTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="2" />

      <TextView
          android:id="@+id/symptomLabelTextView"
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="3"
          android:text="@string/label_street" />

      <TextView
          android:id="@+id/symptomTextView"
          style="@style/ContactTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="3" />

   </GridLayout>
</ScrollView>